# RELEARN-PYTHON

./: .gitignore  CONFIGURATION.md  Justfile  README.md  add_mermaid_diagrams.py  create_sample_data.py  create_scaffolds.py  enrich_all_readmes.py  enrich_readmes.py  install.sh  main.py  migrate_chapter.py  migrate_projects.py  migrate_remaining_projects.py  progres_apprentissage.md  pyproject.toml  test_verify.py
CHAPITRES/01_premiers_pas/: README.md  verification.py
CHAPITRES/02_variables_types/: README.md  exercices.py  solutions.py
CHAPITRES/03_operateurs/: README.md  solutions.py
CHAPITRES/04_controle_flux/: README.md  exercices.py  solutions.py
CHAPITRES/05_boucles/: README.md  exercices.py
CHAPITRES/06_listes_tuples/: README.md  exercices.py  verification.py
CHAPITRES/07_dictionnaires_sets/: README.md  solutions.py
CHAPITRES/08_fonctions/: README.md
CHAPITRES/09_arguments_avances/: README.md  solutions.py  verification.py
CHAPITRES/10_modules_packages/: README.md  exercices.py  verification.py
CHAPITRES/11_classes_objets/: README.md  solutions.py
CHAPITRES/12_heritage_polymorphisme/: README.md  verification.py
CHAPITRES/13_proprietes_methodes_speciales/: README.md  exercices.py
CHAPITRES/14_exceptions/: verification.py
CHAPITRES/15_fichiers_io/: exercices.py  solutions.py
CHAPITRES/16_serialisation/: README.md  solutions.py  verification.py
CHAPITRES/17_decorateurs_generateurs/: README.md  exercices.py  (+1 more)
PROJETS/: README_GLOBAL.md  TEMPLATE.md
relearn_python/: __init__.py  utils.py  validators.py
video-intro/: package.json
(+825 files in other folders)
