[project]
name = "relearn-python"
version = "1.0.0"
description = "Python Mastery - Apprentissage complet de Python"
readme = "README.md"
requires-python = ">= 3.13"
authors = [
    { name = "Ranker", email = "ranker@example.com" }
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.10.0",
    "webdriver-manager>=4.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "flask>=3.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
